[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel",
    "oldest-supported-numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyslice"
dynamic = ["readme", "version"]
description = "Specialized templating engine do develop a parameterized set of model data sets"
dependencies = [
    "binaryornot",
    "numpy",
    ]
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Tim Cera", email = "tim@cerazone.net"}
    ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    ]
keywords = ["monte-carlo",
            "simulation",
            "model",
            "parametric",
            "model-parameters",
            "cli-app",
            ]

[project.optional-dependencies]
dev = [
    "black",
    "cleanpy",
    "twine",
    "pytest",
    "coverage",
    "flake8",
    "pytest-cov",
    "pytest-mpl",
    "pre-commit",
    "black-nbconvert",
    "blacken-docs",
    "velin",
    "isort",
    "pyupgrade",
    "commitizen",
    ]

[project.scripts]
pyslice = "pyslice.pyslice:main"

[project.urls]
documentation = "https://timcera.bitbucket.io/pyslice/docs/index.html#pyslice-documentation"
github = "https://github.com/timcera/pyslice"
bitbucket = "https://bitbucket.org/timcera/pyslice/src/main/"

[tool]

[tool.commitizen]
name = "cz_conventional_commits"
version = "5.0.1"
tag_format = "v$version"
version_files = ["VERSION"]
update_changelog_on_bump = true

[tool.isort]
profile = "black"

[tool.setuptools]
license-files = ["LICENSE.txt"]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = "README.rst"}
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["examples*", "tools*", "docs*", "pyslice.tests*"]

[tool.setuptools_scm]
